[package]
name = "vgltf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.gltf]
version = "1.0"
features = ["extras", "names", 
"KHR_lights_punctual", 
"KHR_materials_pbrSpecularGlossiness",
"KHR_materials_unlit",
"KHR_texture_transform",
"KHR_materials_variants",
"KHR_materials_volume",
"KHR_materials_specular"]